[package]
name = "autovirt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
lazy_static = "1.4.0"
markov = "1.1.0"
poise = "0.6.1"
serde = "1.0.197"
serde_json = "1.0.117"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "postgres", "bigdecimal"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls", "http2", "charset"] }
tracing-subscriber = "0.3.18"
rand = "0.8.5"

[dependencies.urban-rs]
path = "./urban"
